Fix alignment issue for landing page

--- a/styles/Home/Location.module.scss
+++ b/styles/Home/Location.module.scss
@@ -11,7 +11,6 @@
     .inputDiv {
       position: relative;
       width: 100%;
-
       .inputGroup {
         display: flex;
         align-items: center;
@@ -39,7 +38,7 @@
         &:focus-within {
           border: 1px solid rgb(21, 111, 245);
         }
-        @media screen and (max-width: 878px) {
+        @media screen and (max-width: 550px) {
           width: 100%;
         }
 
