--- a/styles/Landing/Landing.module.css
+++ b/styles/Landing/Landing.module.css
@@ -153,7 +153,16 @@
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 30px;
+}
+
+@media screen and (max-width: 550px) {
+  .container .contentContainer .bottom {
+    width: 90%;
+  }
 }
 
 .container .contentContainer .bottom .startDiv {
@@ -171,6 +180,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 .container .contentContainer .bottom .startDiv .start {
@@ -238,9 +248,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   color: black;
 }
@@ -257,7 +267,7 @@
 .container .contentContainer .bottom .locationRow .startBtn {
   height: 53px;
   margin-left: 10px;
-  margin-top: -4px;
+  margin-top: -18px;
   background-color: #ff7300;
   color: white;
 }
@@ -278,7 +288,7 @@
   .container .contentContainer .bottom .locationRow .startBtn {
     width: 95%;
     margin-left: 0;
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
 
